<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SolarYou</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="mercury">Mercury</string>
    <string name="venus">Venus</string>
    <string name="earth">Earth</string>
    <string name="mars">Mars</string>
    <string name="jupiter">Jupiter</string>
    <string name="saturn">Saturn</string>
    <string name="uranus">Uranus</string>
    <string name="neptune">Neptune</string>
    <string name="newage">New Age</string>
    <string name="convert">Convert</string>
    <string name="newplanet">New Planet</string>
    <string name="currentplanet">Current Planet</string>
</resources>
